src/App.css
#root {
  display: flex;
  flex-direction: column;
}

html,
body,
#root {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family:
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Helvetica,
    Arial,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji;
}

button,
input {
  font: inherit;
}

.monaco-editor {
  flex: 1;
}

button:hover {
  cursor: pointer;
}

.split-container {
  flex-grow: 1;
}

.split-component {
  display: flex;
  flex-direction: row;
  flex-grow: 1;
}

.gutter {
  background-repeat: no-repeat;
  background-position: 50%;
}

.gutter.gutter-horizontal {
  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
  cursor: col-resize;
  width: 15px !important;
}

.rti--container {
  padding: 0 0.5rem !important;
}

.rti--input {
  width: 0 !important;
  flex-grow: 1;
}

.split-component > .no-working-files {
  min-width: 0 !important;
  width: 0 !important;
  overflow: hidden !important;
  padding: 0 !important;
  border: none !important;
  visibility: hidden;
}

.editor-working-files button {
  overflow: hidden;
}

.editor-working-files button div {
  text-align: left;
}

.warn-collapse {
  opacity: 0.5;
  transition: opacity 0.2s;
  z-index: -1;
}

